<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".displaySellerProducts.view.FiltrationSheetFragment">


    <TextView
        android:id="@+id/price_range_txt"
        android:text="@string/price_range"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16dp"
        android:fontFamily="sans-serif-medium"
        android:padding="12dp"
        android:textColor="#E97000"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/range_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:stepSize="5"
        android:value="20"
        android:valueFrom="0"
        android:valueTo="100000000"
        app:haloColor="#00477A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/price_range_txt"
        app:thumbColor="#E97000"
        app:tickColor="#00477A"
        app:trackColorActive="#00477A"
        app:trackColorInactive="@color/cardview_shadow_start_color"
        app:values="@array/sliderValues" />


    <View
        android:id="@+id/first_view"
        app:layout_constraintTop_toBottomOf="@id/range_slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:background="#D3D3D3"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="12dp"
        android:text="@string/category"
        android:textColor="#E97000"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_view" />

    <TableLayout
        android:id="@+id/table"
        app:layout_constraintTop_toBottomOf="@id/category_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:stretchColumns="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:id="@+id/first_category"
                android:layout_column="1"
                android:padding="12dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:textColor="#00477A"
                android:text="@string/sell_equip_tag"/>

            <CheckBox
                android:id="@+id/sell_check_box"
                android:buttonTint="@color/orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
        <View
            android:layout_height="1dp"
            android:background="#D3D3D3" />
        <TableRow>
            <TextView
                android:id="@+id/second_category"
                android:layout_column="1"
                android:padding="12dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif"

                android:textColor="#00477A"
                android:text="@string/rent_equip_tag"/>

            <CheckBox
                android:id="@+id/rent_check_box"
                android:buttonTint="@color/orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
        <View
            android:layout_height="1dp"
            android:background="#D3D3D3" />
        <TableRow>
            <TextView
                android:id="@+id/third_category"
                android:layout_column="1"
                android:padding="12dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:textColor="#00477A"
                android:text="@string/spare_tag"/>

            <CheckBox
                android:id="@+id/spare_check_box"
                android:buttonTint="@color/orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
        <View
            android:layout_height="1dp"
            android:background="#D3D3D3" />
    </TableLayout>

    <TextView
        android:id="@+id/equip_label"
        android:text="@string/equip_type"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16dp"
        android:fontFamily="sans-serif-medium"
        android:padding="12dp"
        android:textColor="#E97000"
        app:layout_constraintTop_toBottomOf="@id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <HorizontalScrollView
        android:id="@+id/spare_scroll"
        app:layout_constraintTop_toBottomOf="@id/equip_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/equip_group"
            android:padding="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <com.google.android.material.chip.Chip
                android:id="@+id/eq_chip_one"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coldplaners" />

            <com.google.android.material.chip.Chip
                android:id="@+id/eq_chip_two"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compactors" />

            <com.google.android.material.chip.Chip
                android:id="@+id/eq_chip_three"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/excavators" />

            <com.google.android.material.chip.Chip
                android:id="@+id/eq_chip_four"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dozers" />


            <com.google.android.material.chip.Chip
                android:id="@+id/eq_chip_six"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>
    <TextView
        android:id="@+id/spare_label"
        android:textSize="16dp"
        android:fontFamily="sans-serif-medium"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#E97000"
        app:layout_constraintTop_toBottomOf="@id/spare_scroll"
        android:text="@string/sparetype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <HorizontalScrollView
        android:id="@+id/equip_scroll"
        app:layout_constraintTop_toBottomOf="@id/spare_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/spare_group"
            android:padding="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_one"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turbocharger" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_two"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_three"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accumulator" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_four"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valve" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_five"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hose" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_six"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miscellaneous" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_seven"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hydraulic_components" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_eight"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <Button
        android:id="@+id/apply_btn"
        android:text="@string/apply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/equip_scroll"
        android:backgroundTint="#E97000"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>