<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#F7F8F9"
    tools:context=".authentication.register.view.RegistrationActivity">

    <TextView
        app:layout_constraintStart_toStartOf="@id/name_edt"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/name_label"
        android:textColor="#00477A"
        android:textSize="18sp"
        android:layout_marginTop="64dp"
        android:text="@string/name"
        android:layout_width="0dp"
        android:fontFamily="@font/noto_sans"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/name_edt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_label"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.07"
        android:layout_marginTop="8dp"
        android:textCursorDrawable="@null"
        android:background="@drawable/edit_text_border"
        android:padding="15dp"
        android:textColor="@color/orange"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <TextView
        android:id="@+id/email_label"
        app:layout_constraintStart_toStartOf="@id/name_edt"
        android:textColor="#00477A"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/name_edt"
        android:text="@string/email"
        android:fontFamily="@font/noto_sans"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/email_edt"
        app:layout_constraintStart_toStartOf="@id/name_edt"
        app:layout_constraintEnd_toEndOf="@id/name_edt"
        app:layout_constraintHeight_percent="0.07"
        android:background="@drawable/edit_text_border"
        app:layout_constraintTop_toBottomOf="@id/email_label"
        android:layout_marginTop="8dp"
        android:textCursorDrawable="@null"
        android:padding="15dp"
        android:textColor="@color/orange"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/pass_label"
        android:text="@string/password"
        android:textColor="#00477A"
        android:textSize="18sp"
        android:fontFamily="@font/noto_sans"
        app:layout_constraintStart_toStartOf="@id/email_edt"
        app:layout_constraintTop_toBottomOf="@id/email_edt"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/pass_edt"
        app:layout_constraintHeight_percent="0.07"
        android:background="@drawable/edit_text_border"
        app:layout_constraintStart_toStartOf="@id/email_edt"
        app:layout_constraintEnd_toEndOf="@id/email_edt"
        app:layout_constraintTop_toBottomOf="@id/pass_label"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:textCursorDrawable="@null"
        android:padding="15dp"
        android:textColor="@color/orange"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <Button
        android:id="@+id/register_btn"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintHeight_percent="0.07"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="@id/pass_edt"
        app:layout_constraintEnd_toEndOf="@id/pass_edt"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/pass_edt"
        android:background="@drawable/register_btn_background"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/have_account_label"
        android:textColor="@color/orange"
        android:fontFamily="@font/noto_sans_bold"
        app:layout_constraintStart_toStartOf="@id/register_btn"
        app:layout_constraintTop_toBottomOf="@id/register_btn"
        android:text="@string/have_acount"
        android:layout_marginStart="68dp"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/login"
        android:textSize="14sp"
        android:text="@string/login"
        android:textColor="#00477A"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/noto_sans_bold"
        app:layout_constraintStart_toEndOf="@id/have_account_label"
        app:layout_constraintTop_toTopOf="@id/have_account_label"
        android:layout_marginStart="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/register_seller_label"
        android:text="@string/register_seller"
        app:layout_constraintStart_toStartOf="@id/have_account_label"
        app:layout_constraintTop_toBottomOf="@id/have_account_label"
        android:padding="14sp"
        android:textColor="#00477A"
        android:fontFamily="@font/noto_sans"
        android:layout_marginStart="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/seller_check"
        android:buttonTint="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/register_seller_label"
        app:layout_constraintTop_toTopOf="@id/register_seller_label" />
    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSign"
        app:layout_constraintStart_toStartOf="@id/register_btn"
        app:layout_constraintEnd_toEndOf="@id/register_btn"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/register_seller_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>